# CppWindow

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: cppwindowConfig.cmake.in  glfw-vkConfig.cmake.in
examples/: CMakeLists.txt  basic.cpp  borderless.cpp  heightmap.cpp  opengl.cpp  particles.cpp
examples/glad/: CMakeLists.txt
examples/glad/include/glad/: glad.h
examples/glad/src/: glad.c
include/cppwindow/: cppwindow.hpp  utils.hpp
include/glfw-vk/: Context.hpp  Events.hpp  GLFWvk.hpp  Input.hpp  KeyDefs.hpp  Window.hpp
src/: Context.cpp  InputMap.cpp  InputState.cpp  Window.cpp  cppwindow.cpp  window_registry.hpp
src/backend/: mapper.hpp  native_impl.hpp
src/backend/glfw/: glfw_impl.cpp  glfw_impl.hpp
src/internal/: GlfwIncludes.hpp  InputMap.hpp  InputState.hpp
